--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/base.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <title>{% block title %}Base title{% endblock %}</title>
+
+    <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <!-- Заголовок страницы, который можно переопределить в дочерних шаблонах -->
 </head>
 <body>
