--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -14,7 +14,7 @@
         <!-- Upload section -->
         {% if is_admin %}
             <div class="upload-section" style="justify-content: center">
-                <a id="createCityBtn" class="primary-btn" href="{% url 'work_for_ilia:city_form' %}"  style="">
+                <a id="createCityBtn" class="primary-btn" href="{% url 'work_for_ilia:city_cr_or_upd' %}"  style="">
                     <svg width="16" height="16" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 8px;">
                         <path fill="currentColor" d="M8 0v16M0 8h16"></path>
                     </svg>
