--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -36,6 +36,18 @@
                     Загрузить
                 </button>
 
+                <button id="downloadCityFileBtn" class="primary-btn">
+                    <svg width="16" height="16" viewBox="0 0 30 30"
+                         style="vertical-align: middle; margin-right: 8px;">
+                        <path fill="currentColor"
+                              d="M5.958,21.985l0,5.015c0,0.796 0.316,1.559 0.879,2.121c0.563,0.563 1.326,0.879 2.121,0.879l14,0c0.796,0 1.559,-0.316 2.122,-0.879c0.562,-0.562 0.878,-1.325 0.878,-2.121c0,-2.073 0,-5.015 0,-5.015c0,-0.551 -0.448,-1 -1,-1c-0.552,0 -1,0.449 -1,1l0,5.015c0,0.265 -0.105,0.52 -0.293,0.707c-0.187,0.188 -0.442,0.293 -0.707,0.293l-14,0c-0.265,0 -0.519,-0.105 -0.707,-0.293c-0.187,-0.187 -0.293,-0.442 -0.293,-0.707l0,-5.015c0,-0.551 -0.448,-1 -1,-1c-0.552,0 -1,0.449 -1,1Z"></path>
+                        <path fill="currentColor"
+                              d="M15.002,19.421l-4.3,-4.301c-0.391,-0.39 -1.024,-0.39 -1.415,0c-0.39,0.39 -0.39,1.024 0,1.414c0,0 2.813,2.813 4.587,4.587c0.563,0.563 1.326,0.879 2.122,0.879c0.795,-0 1.558,-0.316 2.121,-0.879c1.774,-1.773 4.585,-4.584 4.585,-4.584c0.39,-0.391 0.39,-1.024 -0,-1.415c-0.391,-0.39 -1.024,-0.39 -1.415,0l-4.285,4.286l0,-16.408c0,-0.552 -0.448,-1 -1,-1c-0.552,-0 -1,0.448 -1,1l0,16.421Z"></path>
+                    </svg>
+
+                    Скачать
+                </button>
+
                 <div id="cityUploadProgress" class="progress-container">
                     <div id="cityUploadProgressBar" class="progress-bar"></div>
                     <div id="cityUploadProgressText" class="progress-text">Загрузка...</div>
