--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -85,7 +85,11 @@
                 <label for="editCityWorkTime">Время работы:</label>
                 <input type="text" id="editCityWorkTime" name="work_time">
 
-                <button id="saveCityButton">Сохранить</button>
+                <div class="button-container">
+                    <button id="saveCityButton">Сохранить</button>
+                    <button id="deleteCityButton">Удалить</button>
+                </div>
+
             </div>
         </div>
 
