Подсчет городов для поиска

--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -109,6 +109,7 @@
     </script>
     <script>
         const uploadUrl = "{% url 'work_for_ilia:cities' %}";
+        const trackCities="{% url 'work_for_ilia:track_cities' %}"
         const csrfToken = '{{ csrf_token }}';
     </script>
     <script src="{% static 'js/cities.js' %}"></script>
