статистика по поиску городов

--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/statistics.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/statistics.html
@@ -14,17 +14,7 @@
         </div>
     </div>
 
-    <div id="data-container" data-json='{
-        "converted_files": "{{ converted_files }}",
-        "coffee_drunk": {
-            "amount": "{{ coffee_drunk.amount }}",
-            "note": "{{ coffee_drunk.note }}"
-        },
-        "hard_day":{
-            "max_day_files": "{{ hard_day.max_day_files }}",
-            "max_date": "{{ hard_day.max_date }}"
-        }
-    }' style="display: none;"></div>
+    <div id="data-container" data-json='{{ statistics_json }}' style="display: none;"></div>
 
 
 
