работа по добавлению всего в docker на свежей версии всех библиотек

--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -87,7 +87,7 @@
 
                 <div class="button-container">
                     <button id="saveCityButton">Сохранить</button>
-                    <button id="deleteCityButton">Удалить</button>
+                    <button id="deleteCityButton" disabled>Удалить</button>
                 </div>
 
             </div>
