--- a/lazy_ilya/lazy_ilya/templates/base.html
+++ b/lazy_ilya/lazy_ilya/templates/base.html
@@ -1,121 +1,97 @@
-{% load static %}  <!-- Загружаем тег для работы со статическими файлами Django -->
+{% load static %}
 
-<!DOCTYPE html>  <!-- Определяет тип документа как HTML5 -->
-<html lang="en">  <!-- Начало HTML-документа с указанием языка (английский) -->
+
+<!DOCTYPE html>
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">  <!-- Устанавливает кодировку документа на UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- Настройки для адаптивного дизайна -->
-
-    <!-- Подключение CSS-стилей из статических файлов -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="{% static 'css/flowbite-browser.css' %}" rel="stylesheet"/>
-    <link rel="icon" href="{% static 'images/banana.ico' %}" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/banana.ico' %}">
     <title>{% block title %}Base title{% endblock %}</title>
-    <script type="text/javascript" src="{% static 'js/tailwindcss-browser.js' %}"></script>
-    <script src="{% static 'js/flowbite-browser.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
-    <script type="application/javascript" src="{% static 'js/logout.js' %}"></script>
-    <!-- Заголовок страницы, который можно переопределить в дочерних шаблонах -->
+    <script type="module" crossorigin src="{% static 'js/main.js' %}"></script>
+    <link rel="stylesheet" crossorigin href="{% static 'css/styles.css' %}">
 </head>
-<body>
-<header>
+<body class="bg-gray-100 dark:bg-gray-300 transition-all duration-300">
 
-    {#    <nav class="nav-bar">  <!-- Навигационная панель -->#}
-    {#        <div class="nav-container">  <!-- Контейнер для навигационных ссылок -->#}
-    {#            <!-- Ссылки на разные страницы с использованием URL-шаблонов Django -->#}
-    {#            <a href="" class="nav-link active">Главная</a>#}
-    {#            <!-- Активная ссылка на главную страницу -->#}
-    {#            <a href="" class="nav-link">Поиск городов</a>#}
-    {#            <!-- Ссылка на страницу поиска городов -->#}
-    {#            <a href="" class="nav-link">Статистика</a>#}
-    {#            <!-- Ссылка на страницу статистики -->#}
-    {#            {% if user.is_authenticated %}#}
-    {#                <!-- Если пользователь авторизован -->#}
-    {#            <a href="{% url 'work_for_ilia:logout' %}" class="nav-link logout-link">LOGOUT</a>#}
-    {#                <form action="" method="post" class=" nav-link nav-form">#}
-    {#                    {% csrf_token %}#}
-    {#                    <button type="submit" class="nav-link logout-link">LOGOUT</button>#}
-    {#                </form>#}
-    {#            {% else %}#}
-    {#                <!-- Если пользователь не авторизован -->#}
-    {#                <a href="" class="nav-link active admin-link">Админ панель</a>#}
-    {#            {% endif %}#}
-    {##}
-    {#        </div>#}
-    {#    </nav>#}
+<header></header>
 
+<!-- Навигация -->
+<nav class="bg-blue-300 dark:bg-blue-800 p-5 shadow-xl transition-colors duration-300">
 
-    <nav class="bg-blue-500 border-gray-200 dark:bg-gray-900">
-        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="{% static 'images/eating.ico' %}" class="h-16" alt="Lazy Ilya Logo">
-                <span class="self-center text-3xl font-semibold whitespace-nowrap dark:text-white text-gray-200">Lazy Ilya</span>
-            </a>
-            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                {% if user.is_authenticated %}
-                    <button type="button"
-                            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-lg px-5 py-2.5  dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">
-                        Logout
-                    </button>
-                    <!-- Если пользователь авторизован -->
-                    {#            <a href="{% url 'work_for_ilia:logout' %}" class="nav-link logout-link">LOGOUT</a>#}
-                    {#                <form action="" method="post" class=" nav-link nav-form">#}
-                    {#                    {% csrf_token %}#}
-                    {#                    <button type="submit" class="nav-link logout-link">LOGOUT</button>#}
-                    {#                </form>#}
-                {% else %}
-                    <!-- Если пользователь не авторизован -->
-                    <button type="button"
-                            class="bg-gray-100 text-blue-500 hover:text-white border border-blue-700 hover:bg-blue-500 lg:text-xl focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-5 py-2.5 text-center  dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800">
-                        Админ панель
-                    </button>
-                {% endif %}
-
-                <button data-collapse-toggle="navbar-cta" type="button"
-                        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                        aria-controls="navbar-cta" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                         viewBox="0 0 17 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M1 1h15M1 7h15M1 13h15"></path>
-                    </svg>
-                </button>
-            </div>
-            <div class="items-center justify-between hidden w-full mx-3 md:flex md:w-auto md:order-1" id="navbar-cta">
-                <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg  md:space-x-8 md:bg-blue-500 bg-gray-50 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-lg font-bold tracking-wide text-white bg-blue-500 hover:bg-blue-400 lg:text-xl md:tracking-normal lg:tracking-wider md:hover:text-gray-300        rounded-sm md:bg-transparent md:hover:bg-transparent  md:p-0 md:dark:text-blue-500"
-                           aria-current="page">Главная</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-lg font-bold tracking-wide text-gray-800         hover:bg-gray-200 lg:text-xl  md:tracking-normal lg:tracking-wider md:hover:text-gray-300        rounded-sm md:bg-transparent md:hover:bg-transparent  md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 ">Адресная
-                            книга</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-lg font-bold tracking-wide text-gray-800         hover:bg-gray-200 lg:text-xl  md:tracking-normal lg:tracking-wider md:hover:text-gray-300        rounded-sm md:bg-transparent md:hover:bg-transparent  md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Статистика</a>
-                    </li>
-                </ul>
-            </div>
+    <div class="flex justify-between items-center">
+        <!-- Левая часть -->
+        <div class="flex items-center gap-5 pl-5 ">
+            <img src=".{% static 'images/eating.ico' %}" alt="Логотип" class="h-20 w-20">
+            <h1 class="text-gray-800 dark:text-white text-5xl font-semibold">Lazy Ilia</h1>
         </div>
-    </nav>
 
-</header>
+        <!-- Меню (десктоп) -->
+        <div class="hidden lg:flex items-center gap-5">
+            <a href="#"
+               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white">Главная</a>
+            <a href="#"
+               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white">Города</a>
+            <a href="#"
+               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white">Статистика</a>
+            <a href="#"
+               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-white">Выход</a>
+        </div>
 
-<main>
 
-    {% block body %}  <!-- Блок для основного содержимого страницы, который можно переопределить в дочерних шаблонах -->
+        <!-- Кнопки справа -->
+        <div class="flex items-center">
+            <!-- Переключатель темы -->
+            <button id="theme-toggle" class="text-yellow-500 dark:text-yellow-400 p-4 h-20 w-20">
+                <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
+                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                     stroke="currentColor" class="w-10 h-10 hidden">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
+                </svg>
+                <svg id="theme-toggle-light-icon" class="w-10 h-10 hidden" xmlns="http://www.w3.org/2000/svg"
+                     fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
+                </svg>
+            </button>
+
+            <!-- Бургер (моб) -->
+            <button id="burger-menu" class="text-gray-700 dark:text-white p-4 h-20 w-20 lg:hidden">
+
+                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <!-- Мобильное меню -->
+    <div id="nav-menu"
+         class="flex-col space-y-2 mt-4 lg:hidden max-h-0 overflow-hidden transition-all duration-300 block ">
+        <a href="#"
+           class="text-gray-800 dark:text-gray-200 pl-5 py-2  text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Главная</a>
+        <a href="#"
+           class="text-gray-800 dark:text-gray-200 pl-10 py-2 text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Города</a>
+        <a href="#"
+           class="text-gray-800 dark:text-gray-200 pl-15 py-2 text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Статистика</a>
+        <a href="#"
+           class="text-gray-800 dark:text-gray-200 pl-30 py-2 text-xl font-medium  rounded hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-white transition-colors block">Выход</a>
+    </div>
+
+</nav>
+
+<!-- Контент -->
+<main class="p-4 text-gray-800 dark:text-gray-900 rounded shadow-inner">
+    <h1 class="text-2xl font-semibold">Работа с документами</h1>
+    <p>Здесь будет отображаться текст документа Word.</p>
+    {% block body %}
         Base Body
     {% endblock %}
 </main>
-<footer>
-    <!-- Информация в футере -->
-</footer>
-
-
+<!-- Информация в футере -->
+<footer></footer>
 {% block extra_js %}
     <!-- Блок для подключения дополнительных JavaScript-файлов, который можно переопределить в дочерних шаблонах -->
 {% endblock %}
