--- a/lazy_ilya/myauth/frontend/src/css/base.css
+++ b/lazy_ilya/myauth/frontend/src/css/base.css
@@ -1,23 +1,24 @@
 @import "tailwindcss";
-@import "flowbite/src/themes/default.css";
-
+@import "../../node_modules/flowbite/src/themes/default.css";
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
+
 @custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
     font-family: 'Press Start 2P';
-    src: url('./fonts/PressStart2P-Regular.ttf') format('truetype');
+    src: url('../fonts/PressStart2P-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('./fonts/Roboto-Regular.ttf') format('truetype');
+    src: url('../fonts/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
+
 
 @theme {
     --color-body-light: oklch(0.967 0.003 264.542);
@@ -42,10 +43,3 @@
     --color-hover-button: oklch(0.546 0.245 262.881);
 
 }
-/*!* Кастомные стили *!*/
-/*@layer base {*/
-/*  body {*/
-/*    @apply bg-body-light dark:bg-body-dark transition-all duration-300;*/
-/*    font-family: 'Inter', sans-serif;*/
-/*  }*/
-/*}*/
