рАБОТА ФОРМЫ РЕГИСТРАЦИИ И ЛОГИРОВАНИЯ

--- a/lazy_ilya/myauth/templates/myauth/registration.html
+++ b/lazy_ilya/myauth/templates/myauth/registration.html
@@ -204,7 +204,7 @@
     </main>
 {% endblock %}
 {% block extra_js %}
-    <script type="module" src="{%  static 'myauth/js/registration-D88XDv0Y.js' %}"></script>
+    <script type="module" src="{%  static 'myauth/js/registration.js' %}"></script>
 {% endblock %}
 
 
