--- a/lazy_ilya/myauth/templates/myauth/base.html
+++ b/lazy_ilya/myauth/templates/myauth/base.html
@@ -6,10 +6,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="{% static 'myauth/images/favicon-r8WDt7cH.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'myauth/images/favicon.ico' %}">
     <title>{% block title %}Базовый шаблон{% endblock %}</title>
-    <script type="module" crossorigin src="{% static 'myauth/js/base-D5A27XBB.js' %}"></script>
-    <link rel="stylesheet" crossorigin href="{% static 'myauth/css/base-Cunkq7eF.css' %}">
+    <script type="module" crossorigin src="{% static 'myauth/js/base2.js' %}"></script>
+    <link rel="stylesheet" crossorigin href="{% static 'myauth/css/base.css' %}">
 </head>
 <body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
 {% block body %}
