--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -5,8 +5,9 @@
 {% endblock %}
 {% block body %}
     <main class="flex justify-center items-center h-screen">
-        <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 transition-colors duration-300">
-
+        <form method="POST"
+              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 animate-fade-in">
+            {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
             <button id="theme-toggle" type="button"
                     class="theme-toggle">
@@ -32,6 +33,14 @@
             </button>
 
             <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Вход</h2>
+            <!-- Ошибка авторизации -->
+            {% if form.non_field_errors %}
+                <div class="text-red-600 text-sm text-center">
+                    {% for error in form.non_field_errors %}
+                        {{ error }}
+                    {% endfor %}
+                </div>
+            {% endif %}
 
             <div>
                 <label for="username" class="block mb-2  font-medium text-text-light dark:text-text-dark">Логин</label>
@@ -52,6 +61,10 @@
                            placeholder="Имя пользователя"
                     >
                 </div>
+                <!-- Сообщение об ошибке прямо под полем -->
+                <p id="login-error" class="text-red-600 dark:text-red-400 text-sm mt-1 hidden">
+                    Логин обязателен
+                </p>
             </div>
             <div>
                 <div class="flex justify-between items-center mb-2">
@@ -73,6 +86,10 @@
                            placeholder="Пароль"
                     >
                 </div>
+                <!-- Сообщение об ошибке прямо под полем -->
+                <p id="password-error" class="text-red-600 dark:text-red-400 text-sm mt-1 hidden">
+                    Пароль обязателен
+                </p>
 
 
             </div>
@@ -84,12 +101,13 @@
             </div>
             <p class="text-center text-sm text-text-light dark:text-text-dark">
                 Нет аккаунта?
-                <a href="#" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
+                <a href="{% url 'myauth:registration' %}" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
             </p>
         </form>
     </main>
 {% endblock %}
-{% block extra_js %}
 
+{% block extra_js %}
+    <script type="module" crossorigin src="{% static 'myauth/js/login.js' %}"></script>
 {% endblock %}
 
