Соединил работу vite django

--- a/lazy_ilya/myauth/frontend/src/css/base.css
+++ b/lazy_ilya/myauth/frontend/src/css/base.css
@@ -2,7 +2,8 @@
 @import "../../node_modules/flowbite/src/themes/default.css";
 
 @plugin "flowbite/plugin";
-@source "../node_modules/flowbite";
+@source "../../node_modules/flowbite";
+@source "../../../templates/**/*.html";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
