--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -104,10 +104,19 @@
                 <a href="{% url 'myauth:registration' %}" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
             </p>
         </form>
+
     </main>
+    <div class=" text-5xl text-blue-600 border-red-600">
+        <p>some test message</p>
+    </div>
 {% endblock %}
 
 {% block extra_js %}
-    <script type="module" crossorigin src="{% static 'myauth/js/login.js' %}"></script>
+    {% if VITE_DEV_MODE %}
+        <script type="module" src="http://localhost:5173/src/js/login.js"></script>
+    {% else %}
+        <script type="module" crossorigin src="{% static 'myauth/js/login.js' %}"></script>
+    {% endif %}
+
 {% endblock %}
 
